feat: input complete name create

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">HaVagas</string>
     <string name="havagas">HaVagas</string>
+    <string name="nome_completo">Nome Completo:</string>
 </resources>
