--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="masculino">Masculino</string>
     <string name="feminino">Feminino</string>
     <string name="sexo">Sexo:</string>
+    <string name="email_email_com">email@email.com</string>
 </resources>
