feat: create graduate select and scroll bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,13 @@
     <string name="email_email_com">email@email.com</string>
     <string name="informe_seu_nome_completo">Informe seu nome completo</string>
     <string name="ex_dd_mm_yyyy">Ex: dd/mm/yyyy</string>
+    <string name="formacao">Formação:</string>
+    <string-array name="formacoes">
+        <item>Fundamental</item>
+        <item>Médio</item>
+        <item>Graduação</item>
+        <item>Especialização</item>
+        <item>Mestrado</item>
+        <item>Doutorado</item>
+    </string-array>
 </resources>
